--- a/css/scss/olds.scss
+++ b/css/scss/olds.scss
@@ -317,6 +317,60 @@
                 background-size: 100% 100%;
             }
         }
+        .tablets{
+            margin-top: 100px;
+            display: flex;
+            .tablet{
+                background-color: #FFFBED;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                border-radius: 30px;
+                h2{
+                    margin: 40px 0 20px 0;
+                }
+                img{
+                    border-top-left-radius: 30px;
+                    border-top-right-radius: 30px;
+                }
+                .price{
+                    font-family: NEXT ART;
+                    font-size: 22px;
+                    font-style: normal;
+                    font-weight: 700;
+                    line-height: 30px;
+                    letter-spacing: 0.02em;
+                    text-align: center;
+                    margin-bottom: 58px;
+                }
+                .button{
+                    background-color: #236967;
+                    border-radius: 30px;
+                    padding: 18px 38px 18px 38px;
+                    text-align: center;
+                    color: white;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-bottom: 62px;
+
+                    font-family: Raleway;
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 600;
+                    line-height: 18px;
+                    letter-spacing: 0.01em;
+                    text-align: left;
+                }
+                .button:hover{
+                    background-color: #47ccc8;
+                }
+            }
+            .middle{
+                margin-left: 75px;
+                margin-right: 75px;
+            }
+        }
     }    
     
 }
